--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>Agile</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <java.version>10</java.version>
+        <maven.compiler.source>1.10</maven.compiler.source>
+        <maven.compiler.target>1.10</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -20,8 +25,4 @@
             <version>0.1.54</version>
         </dependency>
     </dependencies>
-    <properties>
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
-    </properties>
 </project>
