--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-# Auto detect text files and perform LF normalization
+# Handle line endings automatically for files detected as text.
+# Auto perform LF normalization.
 * text=auto
