--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,11 @@
         <version>1.9.5</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.awaitility</groupId>
+        <artifactId>awaitility</artifactId>
+        <version>4.0.2</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 </project>
